@@ -1,3 +1,9 @@
+2007-02-22  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-window-properties.c: (alt_click_radio_toggled_callback),
+	(main), (reload_mouse_modifiers): remove some long-dead code; don't leak
+	stuff on error, either
+
 2007-01-31  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-window-properties.c: (main): don't leak the references to the
